# toy-c

./: .gitignore  buildrun.sh  meson.build  readme.md
include/: io.h  sparseSet.h
src/: entities.c  io.c  main.c  sparseSet.c
src/shaders/: fragmentTest.glsl  vertexTest.glsl
